--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ app.*.map.json
 
 # FVM Version Cache
 .fvm/
+/lib/l10n/app_localizations_en.dart
+/lib/l10n/app_localizations.dart
+/lib/l10n/app_localizations_bn.dart
+/lib/firebase_options.dart
