--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   cupertino_icons: ^1.0.8
@@ -20,6 +22,9 @@ dependencies:
   firebase_core: ^4.2.1
   firebase_crashlytics: ^5.0.5
   firebase_analytics: ^12.0.4
+  intl: ^0.20.2
+  provider: ^6.1.5+1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -30,9 +35,8 @@ dev_dependencies:
 
 
 flutter:
-
-
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
