--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.5+1
   shared_preferences: ^2.5.4
+  flutter_svg: ^2.2.3
+  pin_code_fields: ^8.0.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
@@ -39,7 +42,6 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
