--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_svg: ^2.2.3
   pin_code_fields: ^8.0.1
   carousel_slider: ^5.1.1
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
